<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10sp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starting_time"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TimePicker
                    android:id="@+id/startingTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"/>

                <TextView
                    android:id="@+id/selectedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:visibility="gone"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="?android:buttonBarStyle"
                android:gravity="end">

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btnStartingTimeOkay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textSize="15sp"/>

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btnStartingTimeReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textSize="15sp"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_time"
                android:textColor="@color/orange"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TimePicker
                    android:id="@+id/endingTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"/>

                <TextView
                    android:id="@+id/selectedTime1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle"
                android:gravity="end">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btnEndingTimeOkay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textSize="15sp"/>

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/btnEndingTimeReset1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textSize="15sp"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            style="?android:buttonBarStyle">

            <Button
                style="?android:buttonBarButtonStyle"
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                style="?android:buttonBarButtonStyle"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="15sp"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
